samples/_failures_safe/1761206321_bb75af_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_20c5ac57.c:164: error: expected ‘;’, ‘,’ or ‘)’ at end of input
